# Algorithm-Visualizer

./: makefile
include/: grid.h  tile.h  window.h
lib/TGUI-1.11/: CMakeLists.txt  README.md  changelog.md
lib/TGUI-1.11/cmake/: Dependencies.cmake  Macros.cmake  TGUIConfig.cmake.in
lib/TGUI-1.11/doc/html/: _absolute_or_relative_value_8hpp_source.html  _all_widgets_8hpp_source.html  _animation_8hpp_source.html  _any_8hpp_source.html  _backend_8hpp_source.html  _backend_font_8hpp_source.html  _backend_font_factory_8hpp_source.html  _backend_font_free_type_8hpp_source.html  _backend_font_raylib_8hpp_source.html  _backend_font_s_d_lttf_8hpp_source.html  _backend_font_s_f_m_l_8hpp_source.html  _backend_g_l_f_w_8hpp_source.html  _backend_gui_8hpp_source.html  _backend_gui_g_l_f_w_8hpp_source.html  _backend_raylib_8hpp_source.html  (+747 more)
lib/TGUI-1.11/examples/: CMakeLists.txt  main-GLFW_GLES2.cpp  main-GLFW_OPENGL3.cpp  main-RAYLIB.cpp  main-SDL_GLES2.cpp  main-SDL_GPU.cpp  main-SDL_OPENGL3.cpp  main-SDL_RENDERER.cpp  main-SDL_TTF_GLES2.cpp  main-SDL_TTF_OPENGL3.cpp  main-SFML_GRAPHICS.cpp  main-SFML_OPENGL3.cpp
lib/TGUI-1.11/examples/android/SDL_GPU/app/jni/: CMakeLists.txt  example.cpp
lib/TGUI-1.11/lib/: tgui-d.lib  tgui.lib
lib/TGUI-1.11/src/: CMakeLists.txt  Container.cpp  DefaultBackendWindow.cpp  DefaultBackendWindow.cppm  FileDialogIconLoaderLinux.cpp  Filesystem.cpp  Global.cpp  Signal.cpp  Sprite.cpp  String.cpp  SvgImage.cpp  TGUI.cppm  Text.cpp  Texture.cpp  Timer.cpp  Transform.cpp  Widget.cpp  WindowsIMM.cpp
src/: grid.cpp  main.cpp  tile.cpp  window.cpp
(+175 files in other folders)
